--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -326,6 +326,18 @@
   </div>
   <!-- Empty column -->
   <div class="grid-c-1"></div>
+  <div class="grid-c-1">
+    <div class="faq">
+      <img class="faq__assistent" src="img/assistent.png">
+      <span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id quos ad rerum hic. Quam laudantium tempore?
+      </span>
+      <button class="button button_type_white">
+        Задать вопрос
+      </button>
+    </div>
+  </div>
+  <div class="grid-c-1"></div>
   <div class="grid-c-2 relative">
     <div class="full-hr"></div>
   </div>
