--- a/src/blocks/_common/_common.scss
+++ b/src/blocks/_common/_common.scss
@@ -102,6 +102,9 @@ a{
 .border-radius {
   border-radius: 10px;
 }
+.offset-top-zero{
+  margin-top: 0;
+}
 .text-header{
   font-size: 24px;
   margin: 55px 0 30px;
@@ -1035,7 +1038,9 @@ h2{
     font-size: 15px;
   }
 }
-
+.text-big{
+  font-size: 24px;
+}
 .preview{
   background-color: $color-lightestGray;
   background-repeat: repeat;
