--- a/src/template/creditsuggestion.html
+++ b/src/template/creditsuggestion.html
@@ -8,7 +8,7 @@
                     <div class="long__text-1 text__underline">
                         Кредит наличными тинькофф банк
                     </div>
-                    <div class="flex flex-j-s flex">
+                    <div class="flex flex-j-s flex long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Срок кредита</div>
                             <div class="long__text-3 strong">до 7 лет</div>
@@ -22,7 +22,7 @@
                             <div class="long__text-3 strong">от 10,9%</div>
                         </div>
                     </div>
-                    <div class="flex flex-j-s">
+                    <div class="flex flex-j-s long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Минимальная сумма</div>
                             <div class="long__text-3 strong">10 000руб</div>
@@ -48,7 +48,7 @@
                     <div class="long__text-1 text__underline">
                         Кредит наличными восточный банк
                     </div>
-                    <div class="flex flex-j-s">
+                    <div class="flex flex-j-s long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Срок кредита</div>
                             <div class="long__text-3 strong">до 7 лет</div>
@@ -62,7 +62,7 @@
                             <div class="long__text-3 strong">от 10,9%</div>
                         </div>
                     </div>
-                    <div class="flex flex-j-s">
+                    <div class="flex flex-j-s long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Минимальная сумма</div>
                             <div class="long__text-3 strong">10 000руб</div>
@@ -88,7 +88,7 @@
                     <div class="long__text-1 text__underline">
                         Кредит наличными хоум кредит
                     </div>
-                    <div class="flex flex-j-s">
+                    <div class="flex flex-j-s long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Срок кредита</div>
                             <div class="long__text-3 strong">до 7 лет</div>
@@ -102,7 +102,7 @@
                             <div class="long__text-3 strong">от 10,9%</div>
                         </div>
                     </div>
-                    <div class="flex flex-j-s">
+                    <div class="flex flex-j-s long__location-3">
                         <div class="long__location-1">
                             <div class="long__text-2">Минимальная сумма</div>
                             <div class="long__text-3 strong">10 000руб</div>
