--- a/src/template/debit.html
+++ b/src/template/debit.html
@@ -1,4 +1,4 @@
-<div class="debit">
+<div class="debit card">
     <div class="container">
         <h2>Дебетовые карты</h2>
         <div class="border flex flex-j-s flex-n-w">
