--- a/src/template/header.html
+++ b/src/template/header.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="header__height flex">
             <img class="header__logo" src="img/logo.png" alt="logo"/>
-            <div class="header__location flex">
+            <div class="header__location header__desktop flex">
                 <div class="header__link header__link_open header__link_nested">
                     <ul class="header__nestedlink">
                         <a href="#"><li>Без процентов</li></a>
@@ -21,6 +21,23 @@
                 <a class="header__link" href="#"><img src="img/credit-small.png" alt="Кредиты"> Кредиты</a>
                 <img class="header__search" src="img/search.png" alt="search"/>
             </div>
+            <div class="header__mobile">
+                <i class="fas fa-bars header__icon"></i>
+            </div>
+        </div>
+        <div class="header__mobile header__mobile_menu">
+            <a class="header__link" href="#">Кредитные карты</a>
+            <a class="header__link header__nested" href="#">Без процентов</a>
+            <a class="header__link header__nested" href="#">Без отказа</a>
+            <a class="header__link header__nested" href="#">С бесплатной доставкой</a>
+            <a class="header__link header__nested" href="#">С бесплатным обслуживанием</a>
+            <a class="header__link header__nested" href="#">С кэшбеком</a>
+            <a class="header__link header__nested" href="#">От Олега Тинькова</a>
+            <a class="header__link" href="#">Займы</a>
+            <a class="header__link" href="#">Дебетовые карты</a>
+            <a class="header__link" href="#">Карты рассрочки</a>
+            <a class="header__link" href="#">Кредиты</a>
         </div>
     </div>
 </div>
+
