--- a/src/template/long.html
+++ b/src/template/long.html
@@ -6,7 +6,7 @@
                 <div class="long__text-1 text__underline">
                     Green Money (Грин Мани)
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Срок займа</div>
                         <div class="long__text-3 strong">40 дней</div>
@@ -20,7 +20,7 @@
                         <div class="long__text-3 strong">от 2%</div>
                     </div>
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Рассмотрение</div>
                         <div class="long__text-3 strong">15 минут</div>
@@ -46,7 +46,7 @@
                 <div class="long__text-1 text__underline">
                     Быстроденьги
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Срок займа</div>
                         <div class="long__text-3 strong">40 дней</div>
@@ -60,7 +60,7 @@
                         <div class="long__text-3 strong">от 2%</div>
                     </div>
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Рассмотрение</div>
                         <div class="long__text-3 strong">15 минут</div>
@@ -86,7 +86,7 @@
                 <div class="long__text-1 text__underline">
                     Деньги на дом
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Срок займа</div>
                         <div class="long__text-3 strong">40 дней</div>
@@ -100,7 +100,7 @@
                         <div class="long__text-3 strong">от 2%</div>
                     </div>
                 </div>
-                <div class="flex flex-j-s">
+                <div class="flex flex-j-s long__location-3">
                     <div class="long__location-1">
                         <div class="long__text-2">Рассмотрение</div>
                         <div class="long__text-3 strong">15 минут</div>
