--- a/src/template/main.html
+++ b/src/template/main.html
@@ -1,7 +1,7 @@
 
     <div class="container">
         <div class="main__grid">
-            <div class="flex flex-a-fs grid-c-2 main__item">
+            <div class="flex flex-a-fs grid-c-2 main__item main__item_1">
                 <div>
                     <div class="main__text-1">
                         Кредитные<br> карты
@@ -19,7 +19,7 @@
                     <a href="#" class="main__text-2"><span class="text__underline">Без процентов</span></a>
                 </div>
             </div>
-            <div class="flex  flex-a-fs grid-c-1 grid-r-2 main__item border_left border_right main__extra">
+            <div class="flex  flex-a-fs grid-c-1 grid-r-2 main__item main__item_2 border_left border_right main__extra">
                 <div>
                     <div class="main__text-1">
                         Займы
@@ -35,7 +35,7 @@
                     <img src="img/zaymi.png" alt="zaymi">
                 </div>
             </div>
-            <div class="flex flex-a-fs grid-c-1 grid-r-2 main__item">
+            <div class="flex flex-a-fs grid-c-1 grid-r-2 main__item main__item_3">
                 <div>
                     <div class="main__text-1">
                         Кредиты
@@ -52,7 +52,7 @@
                 </div>
 
             </div>
-            <div class="flex  flex-a-fs grid-c-1 main__item border_right border_top">
+            <div class="flex  flex-a-fs grid-c-1 main__item  main__item_4 border_right border_top">
                 <div>
                     <div class="main__text-1">
                         Карты <br> рассрочки
