--- a/src/template/rassrochki.html
+++ b/src/template/rassrochki.html
@@ -1,4 +1,4 @@
-<div class="rassrochki">
+<div class="rassrochki card">
     <div class="container">
         <h2>Карты  рассрочки</h2>
         <div class="border flex flex-j-s flex-n-w">
