--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,6 +1,6 @@
 <div class="footer container border_top flex flex-j-s">
-    <a href="/">
-        <img class="footer__logo" src="img/logo-footer.png" alt="logo footer">
+    <a href="/" class="footer__logo">
+        <img src="img/logo-footer.png" alt="logo footer">
     </a>
     <a href="#" class="footer__text">Пользовательское соглашение</a>
     <a href="#" class="footer__text">Политика конфиденциальности</a>
