--- a/src/template/about-question.html
+++ b/src/template/about-question.html
@@ -1,5 +1,5 @@
-<div class="container questions">
-    <div class="question half-and-quarter flex flex-j-s flex-a-b">
+<div class="container questions section">
+    <div class="question full-width flex flex-j-s flex-a-b">
         <div class="question__text question__text_type_third">
             <div class="bullet">1</div>
             Но почему нужно оформить именно ее? Ну, она бесплатная.
