--- a/src/template/comments.html
+++ b/src/template/comments.html
@@ -1,8 +1,8 @@
 <div class="comments">
     //= comments-preview.html
-    <div class="flex flex-a-fs container comments__content">
-        <div class="half-and-quarter">
-            <div class="text-sub-title text-blue text-header text-strong">
+    <div class="flex flex-a-fs container comments__content section">
+        <div class="full-width">
+            <div class="text-sub-title text-blue text-header text-header_offset-top_zero text-strong">
                 12 отзывов
             </div>
             <article class="comment flex flex-j-sb flex-d-c form">
@@ -107,7 +107,7 @@
                 </form>
             </article>
         </div>
-        <div class="flex flex-g-1 comments__cards">
+        <div class="flex flex-g-1 comments__cards full-width">
             <div class="cards-mini">
                 <div class="text-sub-title text-header text-header_offset-bottom_zero text-strong">
                     Еще варианты
