--- a/src/template/problems-and-advantages.html
+++ b/src/template/problems-and-advantages.html
@@ -1,19 +1,19 @@
 <div class="container section problems-and-advatages">
-  <div class="problems-and-advatages__grid grid-c-1">
-    <div class="form form_widthOffset_big grid-c-1">
+  <div class="problems-and-advatages__grid">
+    <div class="form form_widthOffset_big problems-and-advatages__item">
       <span class="form__title">Преимущества</span>
       <div class="good-part">Первый займ без процентов</div>
       <div class="good-part">Компетентная и быстрая служба поддержки клиентов</div>
       <div class="good-part">Если хорошая кредитная история, то могут одобрить большую сумму, чем запрашиваете</div>
       <div class="good-part">Моментальное рассмотрение заявки</div>
     </div>
-    <div class="form form_widthOffset_big grid-c-1">
+    <div class="form form_widthOffset_big problems-and-advatages__item">
       <span class="form__title">Недостатки</span>
       <div class="bad-part">Ненадежный пароль от личного кабинета (но можно поменять)</div>
       <div class="bad-part">Для получения займа на карту, QIWI или Яндекс.Денеги требуется сделать фото с надписью "Заявка на займ еКапуста" (для подтверждения личности)</div>
       <div class="bad-part">Нет бесплатного телефона горячей линии</div>
     </div>
-    <div class="grid-c-2">
+    <div class="problems-and-advatages__image">
       <img src="img/card1.jpg" alt="Card 1" class="full-width">
       <div class="text-small text-gray grid-c-2 problems-and-advatages__image-desc">
         Наверняка многие слышали про Рокетбанк — онлайн-банк без каких-либо отделений. И про его лучший продукт — дебетовку
