--- a/src/blocks/problems-and-advatages/problems-and-advatages.scss
+++ b/src/blocks/problems-and-advatages/problems-and-advatages.scss
@@ -11,6 +11,18 @@ $color-border-gray: #dddddd;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
+    grid-column: span 1;
+    margin-top: 20px;
+  }
+  &__item{
+    grid-column: span 1;
+  }
+  &__image-desc{
+    padding: 20px 0;
+    border-bottom: 1px solid $color-border-gray;
+  }
+  &__image{
+    grid-column-start: 2 span;
   }
 }
 .good-part{
@@ -44,9 +56,21 @@ $color-border-gray: #dddddd;
     background-size: 100% 100%;
   }
 }
-.problems-and-advatages{
-  &__image-desc{
-    padding: 20px 0;
-    border-bottom: 1px solid $color-border-gray;
+
+@media (max-width: 1100px){
+  .problems-and-advatages{
+    &__grid{
+      grid-template-columns: 100%;
+      grid-column-start: 2 span;
+    }
+    &__item{
+      &:first-child{
+        margin-top: 20px;
+      }
+      grid-column-start: 1 span;
+    }
+    &__image{
+      grid-column-start: 1 span;
+    }
   }
 }
